packages/frontend/scss/misc/_keyboard_hint_box.scss
.keyboard-hints-popover,
.keyboard-hints-box,
.keyboard-hint-cheatsheet-dialog {
  .keybinding {
    display: block;
    padding: 7px 0;

    .key {
      background: var(--keybindingKeyBackground);
      border-radius: 4px;
      border: 1px var(--keybindingKeyBorder) solid;
      box-shadow: 0px 3px var(--keybindingKeyShadow);
      color: var(--keybindingKeyFontColor);
      display: inline-block;
      font-size: 14px;
      font-weight: 400;
      padding: 3px 10px;

      &:hover,
      &.pressed {
        box-shadow: 0px 1px var(--keybindingKeyShadow);
        transform: translatey(2px);
      }
    }
  }
  .action {
    display: block;
    background-color: var(--keybindingActionBackground);
    border-radius: 4px;
    padding: 4px 6px;
    margin: 4px 0px;

    .heading {
      margin-bottom: 4px;
    }
  }

  .explainer {
    margin-top: 14px;
    font-size: 13px;
  }
}

.keyboard-hints-popover,
.keyboard-hints-box {
  width: 260px;
}

.keyboard-hint-cheatsheet-dialog {
  width: 70% !important;
  .keybinding {
    flex-grow: 1;
    font-size: 0.84em;
  }
  h4 .keybinding {
    flex: none;
    margin-left: 20px;
  }
  .dialog-body {
    padding-bottom: 0;
  }
  .keyboard-hint-dialog-body {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    padding: 4px;
    max-height: 80vh;

    .action {
      width: calc(50% - 15px);
      margin: 7px;
      padding: 10px;
    }

    h2 {
      max-width: 240px;
      font-size: 1.4em;
    }
  }
}

